Fixed index.html readability

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -46,6 +46,13 @@ h1 {
     letter-spacing: 0.1em;
 }
 
+.subheading {
+    background-color: rgba(255, 255, 255, 0.6);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+}
+
 p {
     font-size: 1.2em;
     letter-spacing: 0.1em;
